--- a/.github/workflows/Script.yml
+++ b/.github/workflows/Script.yml
@@ -20,6 +20,7 @@ jobs:
       run: go run calendar/calendar.go
     
     - name: 'Push Calendar'
+      uses: actions-go/push@7ad7ce209f2a038e7bca929b7a4c92026363f856
       with:
         commit-message: "new calendar"
         remote: origin
