--- a/.github/workflows/Script.yml
+++ b/.github/workflows/Script.yml
@@ -1,10 +1,8 @@
 name: Script
 
 on:
-  push:
-    branches: [ "master" ]
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 12 * * *'
 
 jobs:
 
@@ -22,9 +20,6 @@ jobs:
       run: go run calendar/calendar.go
       
     - name: 'Show Diff'
-      run: git status
-      
-    - name: 'Show Diff'
       run: git add .
     
     - name: 'Push Calendar'
@@ -32,6 +27,3 @@ jobs:
       with:
         commit-message: "new calendar"
         remote: origin
-      
-    - name: 'Show Diff2'
-      run: git status
