--- a/.github/workflows/feast.yml
+++ b/.github/workflows/feast.yml
@@ -10,11 +10,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Init Action
+        env:
+          FEAST_SECRET: ${{secrets.FEAST_SECRET}}
+          FEAST_TOKEN: ${{secrets.FEAST_TOKEN}}
 
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: 1.18
 
-      - name: "Print envs"
+      - name: Print envs
         run: go run feast/feast.go
