--- a/.github/workflows/feast.yml
+++ b/.github/workflows/feast.yml
@@ -7,14 +7,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    env:
+      FEAST_SECRET: ${{secrets.FEAST_SECRET}}
+      FEAST_TOKEN: ${{secrets.FEAST_TOKEN
 
     steps:
       - uses: actions/checkout@v3
-      
-      - name: Init Action
-        env:
-          FEAST_SECRET: ${{secrets.FEAST_SECRET}}
-          FEAST_TOKEN: ${{secrets.FEAST_TOKEN}}
 
       - name: Set up Go
         uses: actions/setup-go@v3
